# YallBotMod

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml
src/: MacroManager.cpp  MacroManager.hpp  main.cpp
